tests/errors/misplaced-record-spread/main.pa
# A record update's `...spread` must come first; here it is last.
def main = { a: 1, ...base }
